# LearningOpenGLFromCmake

./: .gitignore  CMakeLists.txt  README.md
Cmake/: Macro.cmake
app/: CMakeLists.txt
script/: build_windows_msvc.sh
